fixed removing notes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="darkener"></div>
   <div id="addNoteModal">
-    <h1>New note</h1>
+    <h1>Create a new note</h1>
     <form id="newNoteForm">
       <span class="form-label">Title</span>
       <div class="inputed-value" contenteditable="true" data-text="Dream about Atlantis"></div>
