adjustments with css

--- a/index.html
+++ b/index.html
@@ -74,16 +74,19 @@
       </div>
     </div>
     <div id="content-preview">
-      <div id="preview-title">Hover over me!</div>
-      <div id="preview-misc">
-        <span>As</span>
-        <span id="preview-category">Guide</span>
-        <span>on</span>
-        <span id="preview-date">11.1.2022</span>       
-      </div>
-      <div id="preview-ctx">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos optio doloribus aut, totam adipisci numquam impedit sed alias. Provident inventore sed, maxime harum illo quaerat nihil perspiciatis nemo ducimus reiciendis?</div>
-      <div id="preview-more-gradient">
-        <div id="gradient-text">Click the note for more</div>
+      <div id="content-legend">Preview</div>
+      <div id="note-preview">
+        <div id="preview-title">Hover over me!</div>
+        <div id="preview-misc">
+          <span>As</span>
+          <span id="preview-category">Guide</span>
+          <span>on</span>
+          <span id="preview-date">11.1.2022</span>       
+        </div>
+        <div id="preview-ctx">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos optio doloribus aut, totam adipisci numquam impedit sed alias. Provident inventore sed, maxime harum illo quaerat nihil perspiciatis nemo ducimus reiciendis?</div>
+        <div id="preview-more-gradient">
+          <div id="gradient-text">Click the note for more</div>
+        </div>
       </div>
     </div>
   </div>
