--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div id="btns">
         <div id="closeBtn">Discard</div>
         <div id="addBtn">Add</div>
+        <div id="saveBtn">Save</div>
       </div>
     </form>
   </div>
@@ -97,10 +98,11 @@
   </script>
 
   <script src="js/notes.js"></script>
+  <script src="js/editNote.js"></script>
   <script src="js/addNote.js"></script>
+  <script src="js/removeNotes.js"></script>
   <script src="js/exportNotes.js"></script>
   <script src="js/importNotes.js"></script>
   <script src="js/displayPreview.js"></script>
-  <script src="js/removeNotes.js"></script>
 </body>
 </html>
