Yournal 1.0 ready release

--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
   <script src="js/exportNotes.js"></script>
   <script src="js/importNotes.js"></script>
   <script src="js/displayPreview.js"></script>
+  <script src="js/localStorage.js"></script>
 </body>
 </html>
