--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="stylesheet" href="style/input_style.css">
 </head>
 <body>
+  <!-- <div id="searchModal" contenteditable="true"></div> -->
   <div id="darkener"></div>
   <div id="addNoteModal">
-    <h1>Create a new note</h1>
+    <h1 id="modalHeader">Create a new note</h1>
     <form id="newNoteForm">
       <span class="form-label">Title</span>
       <div class="inputed-value" contenteditable="true" data-text="Dream about Atlantis"></div>
@@ -41,6 +42,9 @@
         <i class='bx bx-import' ></i>
         <input id="importInput" type="file" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height:100%;">
       </div>
+      <!-- <div title="Search in title" class="nav-btn"><i class='bx bx-search-alt-2'></i></div>
+      <div title="Search in category "class="nav-btn"><i class='bx bx-search' ></i></div>
+      <div title="Search by date" class="nav-btn"><i class='bx bxs-calendar' ></i></div> -->
     </div>
   </nav>
   <div id="content">
@@ -105,5 +109,6 @@
   <script src="js/importNotes.js"></script>
   <script src="js/displayPreview.js"></script>
   <script src="js/localStorage.js"></script>
+  <script src="js/search.js"></script>
 </body>
 </html>
