--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <i class='bx bx-import' ></i>
         <input id="importInput" type="file" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height:100%;">
       </div>
+      <div id="helpMeBtn" title="Create a note with a guide" class="nav-btn"><i class='bx bx-help-circle'></i></div>
       <!-- <div title="Search in title" class="nav-btn"><i class='bx bx-search-alt-2'></i></div>
       <div title="Search in category "class="nav-btn"><i class='bx bx-search' ></i></div>
       <div title="Search by date" class="nav-btn"><i class='bx bxs-calendar' ></i></div> -->
@@ -81,10 +82,9 @@
         <div class="item-date">10.01.2022</div>
       </div> -->
       <div id="list-empty">
-        <!-- Create <i class='bx bx-plus-circle'></i> a new note<br>or import <i class='bx bx-import' ></i> them from a file <br>ヽ(ಠѽಠ)ﾉ -->
         <div>Create <i class='bx bx-plus-circle'></i> a new note</div>
         <div>or import <i class='bx bx-import' ></i> them from a file</div>
-        <div>ヽ(ಠѽಠ)ﾉ</div>
+        <div>Click <i class='bx bx-help-circle'></i> in the top right for help.</div>
       </div>
     </div>
     <div id="content-preview">
